# idea-hub

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
.azure/: plan.copilotmd
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: auth.py  health.py  ideas.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/schemas/: idea.py  user.py
backend/tests/: test_health.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AuthForm.tsx  IdeaCard.tsx  Navbar.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Home.tsx  IdeasCreate.tsx  Login.tsx  UsersList.tsx
infra/: main.bicep
shared/scripts/: generate-types.ps1
spec/: openapi.yaml
