[project]
name = "ideahub-backend"
version = "0.1.0"
description = "FastAPI backend for IdeaHub application"
authors = [
  {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.0.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib>=1.7.4",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0", "mypy>=1.8.0"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["app"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
